# software_quality_project

./: .clang-tidy  .gitignore  Makefile  README.md  requirements.txt
.github/workflows/: ci.yml
c/: CMakeLists.txt
c/include/: calculator.h
c/src/: calculator.c
c/tests/: test_calculator.c
python/: calculator.py  pyproject.toml
python/tests/: test_calculator.py
